Second_Study/src/main/java/com/example/global/error/UserControllerAdvice.java
package com.example.global.error;

import com.example.global.excepton.PasswordNotMatchException;
import lombok.Builder;
import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.RestControllerAdvice;

@RestControllerAdvice
@Builder
public class UserControllerAdvice {

    @ExceptionHandler(CustomException.class)
    public ResponseEntity<UserControllerAdvice> customExceptionHandling(CustomException e) {
        final ErrorCode errorCode = e.getErrorCode();
        return new ResponseEntity<>(
                UserControllerAdvice.builder()
                        .status(errorCode.getStatus())
                        .message(errorCode.getMessage())
                        .build(),
                HttpStatus.valueOf(errorCode.getStatus())
        );
    }
}
